Update Blog “2020-12-09-nhvhnb”

--- a/content/blog/2020-12-09-nhvhnb.md
+++ b/content/blog/2020-12-09-nhvhnb.md
@@ -1,6 +1,6 @@
 ---
-title: nhvhnb
+title: Second blog
 date: 2020-12-09T12:04:26.993Z
-description: " bv"
+description: this is description
 ---
 v b
