Update Blog “2020-12-09-nhvhnb”

--- a/content/blog/2020-12-09-nhvhnb.md
+++ b/content/blog/2020-12-09-nhvhnb.md
@@ -3,4 +3,10 @@ title: Second blog
 date: 2020-12-09T12:04:26.993Z
 description: this is description
 ---
-v b
+# **in my first project**
+
+this is why im quit my job
+
+> ### *why im quit?*
+
+`console.log('a')`
